--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,7 +52,7 @@ body {
 
 /* 创建小型标题代替原大标题 */
 .header-content:before {
-  content: "文档导航";
+  content: "Salty的nai4色色法典";
   color: white;
   font-size: 1.2rem;
   font-weight: 500;
